--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="bar bar-header bar-positive">
-    <h1 class="title" style="text-align:center">MyFirstApp</h1>
+    <h1 class="title" style="text-align:center">I'm Rich!</h1>
   </div>
 </body>
 </html>
